# AI-Native-Kernel

./: .gitignore  AGENTS.md  ANCHORED_SUMMARY.md  CLAUDE.md  Cargo.toml  README.md  SKILL.md  lcov.info  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  ebpf-validation.yml
config/: cluster.example.toml  default.toml  docker-compose.yml
config/grafana/dashboards/: ank-kernel.json  dashboards.yml
config/grafana/datasources/: prometheus.yml  tempo.yml
config/prometheus/: prometheus.yml
config/tempo/: tempo.yml
crates/agent-scheduler/: Cargo.toml
crates/agent-scheduler/benches/: scheduler_bench.rs
crates/agent-scheduler/src/: block.rs  error.rs  lib.rs  priority.rs  scheduler.rs  supervisor.rs
crates/agent-scheduler/tests/: integration.rs  property.rs
crates/capability-security/: Cargo.toml
crates/capability-security/benches/: security_bench.rs
crates/capability-security/src/: audit.rs  lib.rs  metrics.rs  policy.rs  token.rs  uds_auth.rs
crates/capability-security/tests/: chaos.rs  integration.rs  property.rs
crates/compute-scheduler/: Cargo.toml
crates/compute-scheduler/benches/: compute_bench.rs
crates/compute-scheduler/src/: batching.rs  budget.rs  cloud.rs  cost.rs  cuda_ffi.rs  engine.rs  gpu_oom.rs  gpu_pool.rs  hardware.rs  lib.rs  llama.rs  mps.rs  npu.rs  observer.rs  onnx.rs  placement.rs  rocm_ffi.rs  vllm.rs  vram_manager.rs  weights.rs
crates/compute-scheduler/tests/: integration.rs  property.rs
crates/context-memory/: Cargo.toml
crates/context-memory/benches/: memory_bench.rs  mesh_bench.rs  rocksdb_bench.rs
crates/context-memory/examples/: qdrant_mock.rs
crates/context-memory/src/: cold.rs  fs.rs  hot.rs  indexer.rs  lib.rs  linear_mapper.rs  mesh_auth.rs  mesh_tls.rs  p2p_mesh.rs  semantic.rs  swim.rs  vram.rs  warm.rs
crates/context-memory/tests/: integration.rs
crates/immune-system/: Cargo.toml
crates/immune-system/benches/: immune_bench.rs
crates/immune-system/src/: bcell.rs  cytokine.rs  lib.rs  macrophage.rs  tcell.rs
crates/intent-bus/: Cargo.toml
crates/intent-bus/benches/: intent_bus_bench.rs
crates/intent-bus/src/: lib.rs  query_cache.rs
crates/intent-bus/tests/: integration.rs
crates/kernel-companion/: Cargo.toml  build.rs
crates/kernel-companion/benches/: companion_bench.rs
crates/kernel-companion/ebpf/: execve_trace.c  lsm_hook.c
crates/kernel-companion/src/: capability_detect.rs  cgroup.rs  cognitive.rs  config.rs  ebpf_loader.rs  intent_bridge.rs  lib.rs  lsm.rs  main.rs  metrics_server.rs  nlp.rs  observability.rs  proc_identity.rs  retry_telemetry.rs  scope.rs  skill.rs  uds.rs
crates/kernel-companion/src/ebpf/: lsm-security.bpf.c  mod.rs  syscall-tracer.bpf.c
crates/kernel-companion/tests/: chaos.rs  e2e_pipeline.rs  perf_budget.rs  pipeline.rs  privileged_h1_h2.rs
docs/: ai_native_kernel_plan_v2.html  board.html  deploy.md  ebpf_prereqs.md  host_provisioning.md  running.md  tasks.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: audit_entry.rs  capability_token.rs  config_toml.rs  context_key.rs  intent_parser.rs  security_decision.rs  uds_command.rs
obsidian_vault/: README.md  agent-scheduler.md  async-patterns.md  error-handling.md  functions-and-errors.md  getting_started.md  implementation-status.md
obsidian_vault/.obsidian/: workspace.json
obsidian_vault/components/: README.md
obsidian_vault/functions/: 00-Function-Map.md  audit-record.md  build_http_client.md  choose_best.md  context-paging.md  grant_capability.md  intent-publish.md  observe_syscall.md  policy-decision.md  spawn_agent.md  uds-authenticate.md  validate_log.md
obsidian_vault/security/: README.md
scripts/: bootstrap-validation-host.sh  build-ebpf-objects.sh  check-ebpf-prereqs.sh  check-rocksdb-bench-prereqs.sh  git-with-snap-helpers.sh  install-ebpf-deps.sh  profile_tests.py  run-all-tests.sh  run-ci-validations.sh  run-full-validation-suite.sh  run-p2p-tests.sh  run-privileged.sh  run-qdrant-tests.sh  run-warm-bench.sh  run.sh  server.py  sync.py  use-local-toolchain.sh  validate-ebpf-attach.sh  zig-ar.sh  zig-cc.sh
skills/: file-reader.md  no-network.md
supply-chain/: audits.toml  config.toml
