[package]
name = "agent-scheduler"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "AI Agent Scheduler - agent lifecycle, priority, and isolation"
license = "MIT"
repository = "https://github.com/srayuth202510-byte/AI-Native-Kernel"
keywords = ["ai", "scheduler", "agent", "isolation"]

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
intent-bus = { path = "../intent-bus" }
context-memory = { path = "../context-memory" }
capability-security = { path = "../capability-security" }
compute-scheduler = { path = "../compute-scheduler" }
serde_json = { workspace = true }
uuid = { workspace = true }
fastrand = "2.3.0"

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "scheduler_bench"
harness = false
