[package]
name = "capability-security"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "AI Capability Security - token, policy, and audit"
license = "MIT"
repository = "https://github.com/srayuth202510-byte/AI-Native-Kernel"
keywords = ["ai", "security", "capability", "audit"]

[dependencies]
thiserror = { workspace = true }
zeroize = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
prometheus = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "security_bench"
harness = false
