[package]
name = "compute-scheduler"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "AI Compute Scheduler - CPU/GPU/NPU allocation"
license = "MIT"
repository = "https://github.com/srayuth202510-byte/AI-Native-Kernel"
keywords = ["ai", "scheduler", "compute", "gpu"]

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
async-trait = "0.1"
sysinfo = "0.30"
nvml-wrapper = "0.10.0"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
fastrand = "2.3.0"
libloading = "0.8"

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "compute_bench"
harness = false
