[package]
name = "context-memory"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "AI Context Memory Manager - hot/warm/cold paging"
license = "MIT"
repository = "https://github.com/srayuth202510-byte/AI-Native-Kernel"
keywords = ["ai", "memory", "paging", "context"]

[features]
# เปิดใช้งาน RocksDB backend จริงสำหรับ Warm Store (ต้องการ NVMe/disk จริง)
rocksdb-warm = ["dep:rocksdb"]

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
rocksdb = { workspace = true, optional = true }
