[package]
name = "context-memory"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "AI Context Memory Manager - hot/warm/cold paging"
license = "MIT"
repository = "https://github.com/srayuth202510-byte/AI-Native-Kernel"
keywords = ["ai", "memory", "paging", "context"]

[features]
# เปิดใช้งาน RocksDB backend จริงสำหรับ Warm Store (ต้องการ NVMe/disk จริง)
rocksdb-warm = ["dep:rocksdb"]

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
rocksdb = { workspace = true, optional = true }
qdrant-client = "1.18.0"
uuid = { workspace = true, features = ["v4", "v5"] }
ndarray = "0.17.2"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
fastrand = "2.3.0"
notify = "7"
sha2 = "0.10"

[dev-dependencies]
criterion = { workspace = true }
tonic = "0.12"

[[bench]]
name = "rocksdb_bench"
harness = false
required-features = ["rocksdb-warm"]

[[bench]]
name = "memory_bench"
harness = false
