[package]
name = "intent-bus"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "AI Intent Bus - event-driven communication layer"
license = "MIT"
repository = "https://github.com/srayuth202510-byte/AI-Native-Kernel"
keywords = ["ai", "intent", "bus", "event-driven"]

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "intent_bus_bench"
harness = false
