[package]
name = "kernel-companion"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "AI-Native Kernel companion daemon"
license = "MIT"
repository = "https://github.com/srayuth202510-byte/AI-Native-Kernel"
keywords = ["ai", "kernel", "ebpf", "lsm"]

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
aya = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
agent-scheduler = { path = "../agent-scheduler" }
capability-security = { path = "../capability-security" }
compute-scheduler = { path = "../compute-scheduler" }
context-memory = { path = "../context-memory" }
intent-bus = { path = "../intent-bus" }
immune-system = { path = "../immune-system" }
uuid = { workspace = true, features = ["v4"] }
prometheus = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "companion_bench"
harness = false
